--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -347,11 +347,12 @@ jobs:
 
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
               then
+                echo "----------Deleting Old workflow resources----------"
                 aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
                 aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                 aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             else
-                echo "No stacks found with old workflow"
+                echo "----------No Old workflow resources----------"
             fi
 
 workflows:
