--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -11,6 +11,8 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
+    - ansible_port: "22"
+    - ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
@@ -34,3 +36,4 @@
 
   roles:
     - configure-server
+    - configure-prometheus-node-exporter
